moves the topics into config

--- a/config.example.toml
+++ b/config.example.toml
@@ -19,6 +19,8 @@ url = "tls://server:8883"
 certFile = "server.cert.pem"
 username = "user"
 password = "pass"
+sessionTopic = "/net/wlan-sessions"
+devicesTopic = "/net/devices"
 
 [[location]]
 name = "Bar"
