fixes the build chain for docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 FROM golang:1.13
 
 RUN curl -fsSL -o /usr/local/bin/dep https://github.com/golang/dep/releases/download/0.5.2/dep-linux-amd64 && chmod +x /usr/local/bin/dep
+RUN mkdir -p /go/src/github.com/ktt-ol/spaceDevices
 
-RUN mkdir -p /go/src/spaceDevices
-WORKDIR /go/src/spaceDevices
+ENV HOME=/tmp
+WORKDIR /go/src/github.com/ktt-ol/spaceDevices
